--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,8 @@
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
+              <a href="index" class="btn btn-outline-success" >All Profiles</a>
+              <a href="form" class="btn btn-outline-success" >Create post</a>
             </form>
           </div>
         </div>
