--- a/views/form.ejs
+++ b/views/form.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="/scripts/file-preview.js"  defer ></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -14,6 +15,8 @@
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
+              <a href="index" class="btn btn-outline-success" >All Profiles</a>
+              <a href="form" class="btn btn-outline-success" >Create post</a>
             </form>
           </div>
         </div>
@@ -25,6 +28,7 @@
             <input type="text" class="form-control" name="name" id="name" placeholder="UserName" required>
           </div>
             <div class="input-group mb-3">
+              <img style="display: none; object-fit: cover;" id="image-preview" src="" alt="Your picked image" width="50px" height="50px">
                 <input type="file" class="form-control" name="imageupload" id="imageupload" required accept="image/jpg,image/png,image/jpeg">
                 <label class="input-group-text" for="imageupload">Upload</label>
               </div>
